<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    tools:parentTag="com.app.tinkoff_fintech.customViews.PostLayoutWithoutImage"
    android:padding="10dp">

    <com.app.tinkoff_fintech.customViews.RoundImageView
        android:id="@+id/ownerImage"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/ownerName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        tools:text="@string/postGroupName"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        tools:text="@string/postDate"
        android:layout_marginStart="10dp"/>

    <TextView
        android:id="@+id/contentText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        tools:text="@string/postContent"
        android:layout_margin="10dp"
        android:transitionName="@string/transitionNameText"
        android:layout_marginTop="10dp"/>

    <ImageButton
        android:id="@+id/buttonLike"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_favorite_border"
        android:background="@null"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"/>

    <TextView
        android:id="@+id/countLikes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="42"
        android:textSize="15sp"/>

    <ImageButton
        android:id="@+id/buttonComment"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_comment"
        android:background="@null"
        android:layout_marginTop="11dp"
        android:layout_marginEnd="5dp"
        android:layout_marginStart="30dp" />

    <TextView
        android:id="@+id/countComments"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="42"
        android:textSize="15sp"/>

    <ImageButton
        android:id="@+id/buttonRepost"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/share"
        android:background="@null"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp" />

    <TextView
        android:id="@+id/countReposts"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="42"
        android:textSize="15sp"/>

</merge>