<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/setting1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newPostSettingsOnlyFriends"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/materialBlack"
        android:textSize="16sp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch1"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/setting2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newPostSettingsComments"
        android:layout_below="@+id/setting1"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:textColor="@color/materialBlack"
        android:textSize="16sp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch2"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting1"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"/>

    <TextView
        android:id="@+id/setting3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/newPostSettingsNotifications"
        android:layout_below="@+id/setting2"
        style="@style/TextViewSettings"
        android:layout_marginBottom="20dp"/>

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switch3"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/setting2"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_alignParentEnd="true"/>

</RelativeLayout>