<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/mainRelativeLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/rlHeader"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentTop="true">

        <ImageView
            android:id="@+id/iconClose"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/ic_close" />

        <com.app.tinkoff_fintech.ui.views.customViews.RoundImageView
            android:id="@+id/ownerPhoto"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_toEndOf="@+id/iconClose"
            android:src="@drawable/tinkoff_icon" />

        <TextView
            android:id="@+id/ownerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="15dp"
            android:layout_toStartOf="@id/iconDone"
            android:layout_toEndOf="@id/ownerPhoto"
            android:ellipsize="end"
            android:singleLine="true"
            android:textColor="@color/materialBlack"
            android:textSize="17sp"
            tools:text="@string/tools_long_message" />

        <ImageView
            android:id="@+id/iconDone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:padding="15dp"
            android:src="@drawable/ic_done_disable" />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@id/rlHeader"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/dividerIn" />

    <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:background="@null"
        android:fontFamily="sans-serif-light"
        android:gravity="top"
        android:hint="@string/newPostHint"
        android:inputType="textCapSentences"
        android:padding="15dp"
        android:textColor="@color/materialBlack"
        android:textColorHint="@color/materialGray"
        android:textSize="22sp" />

    <RelativeLayout
        android:id="@+id/containerLoadedFile"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/editText"
        android:background="@drawable/doc_rounded_corner"
        android:layout_margin="10dp"
        android:visibility="gone">

        <com.app.tinkoff_fintech.ui.views.customViews.RoundImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:adjustViewBounds="true"
            android:src="@drawable/ic_loaded_file"
            android:padding="10dp"
            android:layout_centerVertical="true"
            android:layout_marginStart="10dp"/>

        <TextView
            android:id="@+id/nameFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            tools:text="@string/new_note_text"
            android:layout_marginStart="65dp"
            android:textColor="@color/materialBlack"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/removeLoadedFile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_close_loaded_image"
            android:layout_centerVertical="true"
            android:padding="10dp"/>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/containerLoadedImage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/containerLoadedFile"
        android:layout_margin="10dp"
        android:visibility="gone">

        <ImageView
            android:id="@+id/loadedImage"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:scaleType="fitCenter"
            android:src="@drawable/tinkoff_icon" />

        <ImageView
            android:id="@+id/removeLoadedImage"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="#20000000"
            android:src="@drawable/ic_close_loaded_image"
            android:padding="5dp"/>

    </RelativeLayout>

    <View
        android:id="@+id/divider2"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/rlExtra"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:background="@color/dividerIn" />

    <RelativeLayout
        android:id="@+id/rlExtra"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_alignParentBottom="true">

        <ImageView
            android:id="@+id/pickPhoto"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginStart="10dp"
            android:padding="18dp"
            android:src="@drawable/ic_image" />

        <ImageView
            android:id="@+id/addFile"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_toEndOf="@id/pickPhoto"
            android:padding="18dp"
            android:src="@drawable/ic_file" />

        <ImageView
            android:id="@+id/settings"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_alignParentEnd="true"
            android:padding="18dp"
            android:src="@drawable/ic_settings" />

    </RelativeLayout>

</RelativeLayout>